[gd_scene load_steps=13 format=3 uid="uid://byuiyktuam5uw"]

[ext_resource type="Script" path="res://scripts/slime2.gd" id="1_l3ib1"]
[ext_resource type="Texture2D" uid="uid://crirmb06tnp8j" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/slime/slime_run_spritesheeet.png" id="2_7rwvq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pdlmw"]
atlas = ExtResource("2_7rwvq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o61wp"]
atlas = ExtResource("2_7rwvq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai256"]
atlas = ExtResource("2_7rwvq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xphx5"]
atlas = ExtResource("2_7rwvq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa4xp"]
atlas = ExtResource("2_7rwvq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1a7c"]
atlas = ExtResource("2_7rwvq")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7qhu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdlmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o61wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xphx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa4xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1a7c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t3ixh"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_44qkm"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vpwxl"]
radius = 7.0
height = 18.0

[node name="slime" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_l3ib1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q7qhu")
autoplay = "default"
frame = 4
frame_progress = 0.737679

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_t3ixh")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_44qkm")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vpwxl")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
